typescript/edl-server/k8s/dev/00-namespace.yaml
---
# 00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-edl
