typescript/edl-server/k8s/dev/08-ingressclass.yaml
---
# 08-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
spec:
  controller: traefik.io/ingress-controller
