typescript/edl-server/k8s/dev/06-traefik.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: dev-edl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - "--configFile=/etc/traefik/traefik.yml"
            - "--log.level=DEBUG"
            - "--accesslog=true"
            - "--providers.kubernetesingress.ingressclass=traefik"  # Added this line
          volumeMounts:
            - name: cert
              mountPath: /certs
              readOnly: true
            - name: traefik-config
              mountPath: /etc/traefik
              readOnly: true
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
      volumes:
        - name: cert
          secret:
            secretName: tls-cert
        - name: traefik-config
          configMap:
            name: traefik-config
