typescript/edl-server/k8s/dev/10-traefik-svc.yaml
# 10-traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: dev-edl
  annotations:
    metallb.universe.tf/address-pool: default-pool
    metallb.universe.tf/loadBalancerIPs: "10.0.0.68"  # Use this annotation instead of loadBalancerIP
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
    - name: websecure
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: traefik
